--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-query": "^5.8.9",
+    "@tanstack/react-query-devtools": "^5.9.0",
+    "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "0.263.1",
